PROJECT(GDCMJASPER C)

# Don't ask me why...
IF(APPLE)
  SET(CMAKE_SHARED_LINKER_FLAGS -single_module CACHE STRING "" FORCE)
ENDIF(APPLE)

#OPTION(HAVE_LIBJPEG "Do you have ijg" OFF)
IF(GDCM_SOURCE_DIR)
  SET(HAVE_LIBJPEG ON CACHE BOOL "Do you have ijg" FORCE)
ELSE(GDCM_SOURCE_DIR)
  SET(HAVE_LIBJPEG OFF CACHE BOOL "Do you have ijg" FORCE)
ENDIF(GDCM_SOURCE_DIR)

MARK_AS_ADVANCED(HAVE_LIBJPEG)

SUBDIRS(src)
