LTVERSION = 0:1:0

lib_LTLIBRARIES = libgdcmijpeg12.la

##CXXFLAGS = @CXXFLAGS@

libgdcmijpeg12_la_SOURCES= \
	jcapimin12.c \
	jcapistd12.c \
	jctrans12.c \
	jcparam12.c \
	jdatadst12.c \
	jcinit12.c \
	jcmaster12.c \
	jcmarker12.c \
	jcmainct12.c \
	jcprepct12.c \
	jccoefct12.c \
	jccolor12.c \
	jcsample12.c \
	jchuff12.c \
	jcphuff12.c \
	jcdctmgr12.c \
	jfdctfst12.c \
	jfdctflt12.c \
	jfdctint12.c \
	jdapimin12.c \
	jdapistd12.c \
	jdtrans12.c \
	jdatasrc12.c \
	jdmaster12.c \
	jdinput12.c \
	jdmarker12.c \
	jdhuff12.c \
	jdphuff12.c \
	jdmainct12.c \
	jdcoefct12.c \
	jdpostct12.c \
	jddctmgr12.c \
	jidctfst12.c \
	jidctflt12.c \
	jidctint12.c \
	jidctred12.c \
	jdsample12.c \
	jdcolor12.c \
	jquant112.c \
	jquant212.c \
	jdmerge12.c \
	jcomapi12.c \
	jutils12.c \
	jerror12.c \
	jmemmgr12.c \
	jmemnobs12.c

libgdcmijpeg12includedir = $(includedir)
libgdcmijpeg12include_HEADERS = \
	jchuff12.h  \
	jconfig12.h  \
	jdct12.h  \
	jdhuff12.h  \
	jerror12.h  \
	jinclude12.h  \
	jmemsys12.h  \
	jmorecfg12.h  \
	jpegint12.h  \
	jpeglib12.h  \
	jversion12.h

EXTRA_DIST = \
   jconfig.linux \
   jconfig.vc
