LTVERSION = 0:1:0

lib_LTLIBRARIES = libgdcmjpg.la

##CXXFLAGS = @CXXFLAGS@

libgdcmjpg_la_SOURCES = \
 decomp.c   \
 huffd.c    \
 jpegutil.c \
 mcu.c      \
 predict.c  \
 read.c

libgdcmjpgincludedir = $(includedir)
libgdcmjpginclude_HEADERS = \
 io.h       \
 jpeg.h     \
 jpegless.h \
 mcu.h      \
 predict.h  \
 proto.h

